# DGKL

./: README.md  pyproject.toml
cat_uncertainty/: __init__.py
cat_uncertainty/analysis/: __init__.py  analysis.py  calibration.py  graph_metric_analysis.py  uq_metric_analysis.py
cat_uncertainty/analysis/example_results/: metrics.json
cat_uncertainty/data/: config.py  datamodule.py  lmdb_dataset.py  soap_transform.py
cat_uncertainty/dgkl/: dgkl.py  kmeans_init.py  random_init.py  train_painn.py  train_painn_atomic.py  train_schnet.py  train_schnet_atomic.py
cat_uncertainty/ensemble_model/: ensemble.py
cat_uncertainty/evidential_model/: evidential.py  evidential_trainer.py  train_painn.py  train_schnet.py
cat_uncertainty/graph_models/: callbacks.py  graph_trainer.py  optimizers.py  regression_metrics.py  train_painn.py  train_schnet.py
cat_uncertainty/graph_models/models/: gcn_conv.py  painn.py  schnet.py  utils.py
cat_uncertainty/graph_models/models/WIP_models/: dimenet_pp.py
cat_uncertainty/monte_carlo_model/: mcd_model.py  mcd_trainer.py
cat_uncertainty/utils/: config_utils.py  console.py  utils.py
experiments/DGKL/CatHub_PaiNN/comp_1/: script.py
experiments/DGKL/CatHub_PaiNN/comp_2/: script.py
experiments/DGKL/CatHub_PaiNN/comp_3/: script.py
experiments/DGKL/CatHub_PaiNN/comp_4/: script.py
experiments/DGKL/CatHub_PaiNN/comp_5/: script.py
experiments/DGKL/CatHub_SchNet/comp_1/: script.py
experiments/DGKL/CatHub_SchNet/comp_2/: script.py
experiments/DGKL/CatHub_SchNet/comp_3/: script.py
experiments/DGKL/CatHub_SchNet/comp_4/: script.py
experiments/DGKL/CatHub_SchNet/comp_5/: script.py
experiments/DGKL/OC20_SchNet/comp_1/: script.py
experiments/DGKL/OC20_SchNet/comp_2/: script.py
experiments/DGKL/OC20_SchNet/comp_3/: script.py
experiments/DGKL/OC20_SchNet/comp_4/: script.py
experiments/DGKL/OC20_SchNet/comp_5/: script.py
(+77 files in other folders)
